fix spacing for contact links

--- a/css/content.css
+++ b/css/content.css
@@ -98,7 +98,7 @@ a:visited {
 }
 .socialmedia ul li {
 	float: left;
-	padding: 10%;
+	padding: 7%;
 }
 
 /* standard html tags */
